Fix alignment of app labels in dock
This is done by adding a "show" class to app lists that aren't tagged as hidden. The .app is made into a column flex box and the label is centered via the align-items property.

--- a/css.css
+++ b/css.css
@@ -86,31 +86,15 @@
 	align-content: flex-start;
 }
 .app {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	position: relative;
 	text-align: center;
 	aspect-ratio: 1;
 	border-radius:19%;
 	transition: background-color var(--nav-transition);
 
-	.hidden & {
-		& label {
-			display: none;
-			bottom: 120%;
-			background-color: var(--extreme-bg);
-			border-radius: 10px;
-			padding: 5px 10px;
-			color: var(--extreme-fg);
-			height:2em;
-			opacity: 0;
-			position: absolute;
-			transition: opacity var(--nav-transition);
-		}
-		&:hover label {
-			display: block;
-			top:-52px;
-			opacity: 1;
-		}
-	}
 	&.open::after {
 		content: ' ';
 		height:6px;
@@ -125,12 +109,32 @@
 	}
 	& label {
 		display: block;
-		position: relative;
-		overflow-x: hidden;
 		white-space: nowrap;
-		text-overflow: ellipsis;
-		transition: color var(--theme-transition);
-		margin-top: 5px;
+		transition: color var(--theme-transition), opacity var(--nav-transition);
+	}
+	.hidden & {
+		& label {
+			top:-52px;
+			opacity: 0;
+			height:2em;
+			bottom: 120%;
+			padding: 5px 15px;
+			position: absolute;
+			border-radius: 15px;
+			color: var(--extreme-fg);
+			background-color: var(--extreme-bg);
+		}
+		&:hover label {
+			opacity: 1;
+		}
+	}
+	.show & {
+		& label {
+			margin-top: 5px;
+			max-width:100%;
+			text-overflow: ellipsis;
+			overflow-x: hidden;
+		}
 	}
 	&:hover {
 		background-color: var(--hover-shade);
@@ -218,15 +222,15 @@
 	perspective: 1vh;
 
 	#search {
-		position: absolute;
-		font-weight: 400;
-		background: var(--search-color);
-		padding:8px 20px 8px 40px;
-		border-radius: 20px;
+		top:12px;
 		width:350px;
-		border: 2px solid transparent;
-		margin:12px auto;
+		position: fixed;
+		font-weight: 400;
+		border-radius: 20px;
 		color:var(--text-color);
+		padding:8px 20px 8px 40px;
+		border: 2px solid transparent;
+		background: var(--search-color);
 	
 		&:hover {
 			background: var(--search-hover);
@@ -245,7 +249,6 @@
 		width:  100%;
 		translate: 0;
 		display: flex;
-		
 		transition:
 			translate var(--nav-transition),
 			gap       var(--nav-transition);
